Agregando titulo y parrafo a la pagina

--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hola Curso Git</h1>
+    <p>Esto es un párrafo de ejemplo</p>
 </body>
 </html>
