Saludo javascript agregado

--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/javascript.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Hola Curso Git</h1>
     <p>Esto es un párrafo de ejemplo</p>
+    <input type="button" onclick="saludo()" value="Dale ya"/>
 </body>
 </html>
