Agregando tercer parrafo

--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hola Curso Git</h1>
     <p>Esto es un párrafo de ejemplo</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, totam?</p>
 </body>
 </html>
