Agregando parrafo desde rama javascript

--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -11,5 +11,7 @@
     <h1>Hola Curso Git</h1>
     <p>Esto es un párrafo de ejemplo</p>
     <input type="button" onclick="saludo()" value="Dale ya"/>
+    <p>Este párrafo se creo desde la rama javascript</p> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, numquam.</p>   
 </body>
 </html>
