--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hola Curso Git</h1>
-    <p>Esto es un párrafo de ejemplo</p>
+    <p>Esto es un párrafo del documento html y aquí aparecerá más contenido en un futuro</p>
     <input type="button" onclick="saludo()" value="Dale ya"/>
     <p>Este párrafo se creo desde la rama javascript</p> 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, numquam.</p>   
