Modificacion del primer parrafo desde master

--- a/Proyecto Web Empresa A/index.html
+++ b/Proyecto Web Empresa A/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hola Curso Git</h1>
-    <p>Esto es un párrafo de ejemplo</p>
+    <p>Esto es un párrafo de nuestro ejemplo y veremos si somos capaces de hacer un merge</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, totam?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, totam?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, totam?</p>
